fixes too tall of pick rows

--- a/client/app/src/modules/private/pick/make/_pick.make.scss
+++ b/client/app/src/modules/private/pick/make/_pick.make.scss
@@ -1,4 +1,7 @@
 .week-games {
+  .game-row {
+    padding: 0 10px 0 10px;
+  }
   .invalid-game, .invalid-squad {
     color: #a94442;
   }
